--- a/jni-test.conf
+++ b/jni-test.conf
@@ -16,10 +16,8 @@ replication:
 	slaveof:
 
 logger:
-	level: info
-	output: ./target/data/ssdb/log.txt
-	rotate:
-		size: 1000000000
+	level: warn
+	output: stdout
 
 leveldb:
 	# in MB
